<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LessonsFragments.Lesson1.PageOne"
        android:baselineAligned="false">

        <TextView
            android:id="@+id/text_L1P1_title"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:text="Depolarización del corazón"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/text_L1P1"
            android:textSize="17sp"
            android:textColor="#3e3d3d"
            android:layout_width="match_parent"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:gravity="fill_horizontal"
            android:text="@string/str_L1_P1_1"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#3e3d3d"
            android:textSize="17sp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/str_L1_P1_2"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#9c4d4d"
            android:textSize="18sp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold|italic"
            android:paddingLeft="10dp"
            android:text="El trazo ECG"
            />
        
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="fitXY"
            android:src="@drawable/image_ecg"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#3e3d3d"
            android:textSize="17sp"
            android:layout_marginLeft="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/str_L1_P1_3"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#080808"
            android:textStyle="bold"
            android:textSize="17sp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:text="La onda P"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#3e3d3d"
            android:textSize="17sp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/str_L1_P1_4"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#080808"
            android:textStyle="bold"
            android:textSize="17sp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:text="El intervalo PR"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#3e3d3d"
            android:textSize="17sp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/str_L1_P1_5"
            />
    </LinearLayout>


</ScrollView>
